Migration to nms Component